<resources>
    <string name="app_name">IranPlanner</string>

    <string name="app_see_key">6171dabacaf7485e9f70b8daf21ae546</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_map_full">Map</string>
    <string name="title_activity_attraction_detail">Map</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string-array name="navigation_items">
        <item>ایتم اول</item>
        <item>ایتم دوم</item>
        <item>ایتم سوم</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_scrolling1">ScrollingActivity1</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_scrolling_activityttest">ScrollingActivityttest</string>
    <string name="price_hotel">هزینه اقامت در این اتاق </string>
    <string name="additve_person">هزینه نفراضافه </string>
    <string name="halfin_halfout">تعجیل در ورود- تاخیر در خروج </string>
    <string name="discount">تخفیف شما:</string>
    <string name="halfinout">تعجیل در ورود- تاخیر در خروج </string>
    <string name="final_step_reservation"> تایید نهایی و ارسال درخواست</string>
    <string name="home_title_hotel_cat">دسته بندی اقامتگاه ها</string>
    <string name="hotel">هتل</string>
    <string name="more_event">رویدادهای بیشتر</string>
    <string name="events">رویدادها</string>
    <string name="attraction">جاذبه گردشگری</string>
    <string name="eco_hotel">بوم گردی</string>
    <string name="traditional_hotel">مهمانسرا</string>
    <string name="most_visited_hotel">اقامتگاه های پربازدید</string>
    <string name="more_hotel">هتل های بیشتر</string>
    <string name="attraction_cat">دسته بندی جاذبه ها</string>
    <string name="nature">طبیعی</string>
    <string name="historical_cultural">تاریخی و فرهنگی</string>
    <string name="religious">مذهبی</string>
    <string name="sport">تفریحی و ورزشی</string>
    <string name="more_attraction">جاذبه های بیشتر</string>
    <string name="itinerary">برنامه سفر</string>
    <string name="local_food">غذاهای محلی</string>
    <string name="souvenir">سوغاتی</string>
    <string name="near_city">شهرهای مجاور</string>
    <string name="provineList">استانهای ایران</string>
    <string name="flight">پرواز</string>
    <string name="accomodation">اقامت</string>
    <string name="where_to_go">کجابریم؟</string>
    <string name="about">درباره</string>
    <string name="my_booking">اقامت های من</string>
    <string name="signout">خروج از حساب کاربری</string>
    <string name="edit_profile">ویرایش پروفایل</string>
    <string name="dear_user">کاربر عزیز</string>
    <string name="my_info">مشخصات من</string>
    <string name="date_request">تاریخ ثبت درخواست</string>
    <string name="room_quantity">تعداد اتاق</string>
    <string name="unsend_request">درخواست های ارسال نشده</string>
    <string name="iranplanner_address">آدرس : تهران , خیابان زعفرانیه , کوچه ی زردکوه , کوچه ی کیوان , بن بست بهار,پلاک ۵</string>
    <string name="iranplanner_email">ایمیل : info@iranplanner.com</string>
    <string name="iranplanner_phone">تلفن : ۰۲۱۹۶۶۶۹۰۶۲</string>

    <string name="dummy">لورم ایپسوم یا طرح‌نما (به انگلیسی: Lorem ipsum) به متنی آزمایشی و بی‌معنی در صنعت چاپ، صفحه‌آرایی و طراحی گرافیک گفته می‌شود. طراح گرافیک از این متن به عنوان عنصری از ترکیب بندی برای پر کردن صفحه و ارایه اولیه شکل ظاهری و کلی طرح سفارش گرفته شده استفاده می نماید، تا از نظر گرافیکی نشانگر چگونگی نوع و اندازه فونت و ظاهر متن باشد. معمولا طراحان گرافیک برای صفحه‌آرایی، نخست از متن‌های آزمایشی و بی‌معنی استفاده می‌کنند تا صرفا به مشتری یا صاحب کار خود نشان دهند که صفحه طراحی یا صفحه بندی شده بعد از اینکه متن در آن قرار گیرد چگونه به نظر می‌رسد و قلم‌ها و اندازه‌بندی‌ها چگونه در نظر گرفته شده‌است. از آنجایی که طراحان عموما نویسنده متن نیستند و وظیفه رعایت حق تکثیر متون را ندارند و در همان حال کار آنها به نوعی وابسته به متن می‌باشد آنها با استفاده از محتویات ساختگی، صفحه گرافیکی خود را صفحه‌آرایی می‌کنند تا مرحله طراحی و صفحه‌بندی را به پایان برند.</string>

    <string-array name="nationality">
        <item>ایرانی</item>
        <item>خارجی</item>

    </string-array>
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"https://www.iranplanner.com\",\n  }\n}]</string>
    <string name="tutorial_one">تجربه ی سفری حرفه ای و خاص همراه با برنامه سفرهای ایران پلنر</string>
    <string name="tutorial_two">متنوع ترین سامانه رزرو هتل و مراکز اقامتی در سراسر ایران</string>
    <string name="tutorial_three">اطلاع از تازه ترین و هیجان انگیزترین رویدادهای گردشگری در ایران</string>
    <string name="tutorial_four">بهترین پیشنهادها برای خرید سوغاتی و غذاهای محلی</string>
</resources>
