<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/accountHolder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Email Label -->
            <LinearLayout
                android:id="@+id/accountInputHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_standard"
                android:background="@drawable/corner_layout"
                android:orientation="vertical"
                android:padding="@dimen/padding_standard">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_standard">

                    <TextView
                        android:id="@+id/txtProfileName"
                        style="@style/StandardTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/dear_user"
                        android:textColor="@color/main_blue" />

                    <TextView
                        android:id="@+id/btnEditProfile"
                        style="@style/SmallText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/margin_standard"
                        android:layout_marginTop="@dimen/margin_standard"
                        android:background="@drawable/button_corner_blue"
                        android:gravity="center"
                        android:paddingBottom="@dimen/padding_short"
                        android:paddingLeft="@dimen/margin_standard"
                        android:paddingRight="@dimen/margin_standard"
                        android:paddingTop="@dimen/padding_short"
                        android:text="@string/edit_profile"
                        android:textColor="@color/white_"
                        android:visibility="invisible" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/LayoutShowProfileHolder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true">

                    <TextView
                        android:id="@+id/showProfile"
                        style="@style/StandardTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="@dimen/margin_standard"
                        android:layout_marginTop="@dimen/margin_standard"
                        android:text="@string/my_info" />

                    <ImageView
                        android:layout_width="@dimen/height20"
                        android:layout_height="@dimen/height20"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/ic_send_grey"
                        android:visibility="invisible"

                  />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/showProfile"
                        android:background="@color/greyLight" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/HotelReservationStatusHolder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true">

                    <TextView
                        android:id="@+id/txtHotelReservationStatus"
                        style="@style/StandardTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="@dimen/margin_standard"
                        android:layout_marginTop="@dimen/margin_standard"
                        android:text="@string/my_booking" />

                    <ImageView
                        android:layout_width="@dimen/height20"
                        android:layout_height="@dimen/height20"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/ic_send_grey"
                        android:id="@+id/imgHotelReservationStatus"
                        android:visibility="invisible"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/greyLight"
                        android:layout_alignParentBottom="true"
                        />
                </RelativeLayout>
                <!--<RelativeLayout-->
                    <!--android:id="@+id/HotelReservationStatusHolder"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginTop="@dimen/margin_standard">-->

                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_alignParentRight="true"-->
                        <!--android:layout_centerVertical="true"-->
                        <!--android:text="@string/my_booking"-->
                        <!--android:id="@+id/txtHotelReservationStatus"-->
                        <!--style="@style/StandardTitle"-->
                        <!--android:layout_marginBottom="@dimen/margin_standard"-->
                        <!--/>-->

                    <!--<ImageView-->
                        <!--android:layout_width="30dp"-->
                        <!--android:layout_height="30dp"-->
                        <!--android:layout_alignParentLeft="true"-->
                        <!--android:layout_centerVertical="true"-->
                        <!--android:src="@mipmap/ic_send_grey"-->
                        <!--android:visibility="invisible" />-->
                    <!--<View-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="1dp"-->
                        <!--android:layout_below="@+id/showProfile"-->
                        <!--android:background="@color/greyLight" -->
                        <!--android:layout_alignParentBottom="true"/>-->
                <!--</RelativeLayout>-->
                <RelativeLayout
                    android:id="@+id/exitFromAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_standard"
                    android:layout_marginTop="@dimen/margin_standard">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/signout" />

                    <ImageView
                        android:layout_width="@dimen/height20"
                        android:layout_height="@dimen/height20"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/ic_send_grey"
                        android:visibility="invisible" />
                </RelativeLayout>

            </LinearLayout>



        </LinearLayout>
    </ScrollView>

</LinearLayout>